Changes in 2.2.4 :
- Fix crash in fileview 
- Added patch from Rafel Milecki to add file selection in the coldmilk webgui
- Added patch from Rafel Milecki to add a confirmation dialog when the user shutsdown KT in the default webgui
- Fixed bug which caused the set max rate menu in the system tray icon menu to fail in recent KDE versions

Changes in 2.2.3 :
- Fix datacheck of 4GB+ files on 32 bit systems
- Prioritise at least 1 % of multimedia files instead of 1 chunk
- Fix crashes caused by SIGXFSZ (BUG: 149747)
- Make sure body tag is OK in 404 and 500 error defines in webgui (BUG: 150023)
- Fix bug which allows clients to trick KT in enabling PEX on private torrents
- If do not use KDE proxy is enabled and no alternative proxy is set, make sure we use no proxy at all for HTTP tracker connections. (BUG: 150284)
- Removed slashes which prevent opening torrents to work in ktshell
- Fix broken preexsting file check, which can result in files being deleted when the user deselects them and they already exist. (
BUG: 150563)
- When stop all and start all is pressed, make sure that start and stop buttons are updated properly (BUG: 149549)
- Make URL of tracker selectable in tracker tab
- Fix issue with speed calculating, causing the displayed speed to grow enormously
- Updated Peer ID list with more clients
- Fix crash when trying to download an empty link with the RSS plugin (BUG: 150879)
- Fix crash at exit when the RSS plugin was loaded
- Make TrayHoverPopup dissapear faster (BUG: 148243)
- Sort IP addresses by their actual value and not by their string representation (BUG: 150328)
- Added patch from Jaak Ristioja, which updates the FileView in a separate thread.
- Make sure only the files of a torrent are moved when the data directory is changed.
- Make sure window is not hidden when hidden_on_exit is true and the system tray icon is not enabled 
- Added patch from Stefan Monov to hide the menubar (BUG: 151450)
- Fix crash at exit (BUG: 149827)